--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Activities</string>
+    <string name="app_name">Калькулятор бармена</string>
+    <string name="tip">Процент чаевых:</string>
+    <string name="sum">Cумма заказа:</string>
+    <string name="total">Итого:</string>
 </resources>
